# mangapy

./: .flake8  .gitignore  AGENTS.md  Pipfile  README.md  pyproject.toml  sample.yaml  sample2.yaml  sample3.yaml  setup.py  test.yaml
.github/workflows/: pythonpackage.yml  release.yml
Formula/: mangapy.rb
docs/: Development.md  Distribution.md  Tests.md
manga/: MangaFox.py  MangaPark.py  MangaRepository.py  __init__.py  utils.py
mangapy/: MangaPark.py  MangaRepository.py  __init__.py  auto_proxy.py  capabilities.py  chapter_archiver.py  chapter_downloader.py  chapter_downloader_2.py  cli.py  download_manager.py  downloader.py  experiments.py  experiments2.py  experiments3.py  fanfox.py  mangadex.py  mangafox.py  mangapark.py  mangarepository.py  multi_threads.py  prova.py  providers.py  proxy.py  test.yaml  utils.py
samples/: sample.yaml  sample2.yaml  sample3.yaml  sample4.yaml  test.yaml
scripts/: bench_py.py  dev_run.py
tests/: context.py  test_chapter_archiver.py  test_cli.py  test_download_manager.py  test_fanfox.py  test_fanfox_packed_js.py  test_fanfox_search.py  test_mangadex.py  test_mangapark.py  test_providers.py  test_sort_key.py  test_thread_safety.py  tests_mangapark.py
