[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mangapy"
version = "4.0.0"
description = "Manga downloader"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Alessandro Marzoli", email = "alessandromarzoli@gmail.com"}]
urls = {Homepage = "https://github.com/alemar11/mangapy"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: End Users/Desktop",
]
dependencies = [
  "beautifulsoup4>=4.14.3",
  "img2pdf>=0.6.3",
  "pyyaml>=6.0.3",
  "requests>=2.34.2",
  "tqdm>=4.67.3",
]

[project.scripts]
mangapy = "mangapy.cli:main"

[dependency-groups]
dev = [
  "flake8>=7.3.0",
  "pylint>=4.0.5",
  "pytest>=9.0.3",
  "rope>=1.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mangapy*"]
